--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								<span class="image main"><img src="images/image1.jpg" alt="" /></span>
 								<p>My name is Jiacheng Hu, but I prefer to be called Jackson. I received a M.S degree in Business Analytics from Santa Clara University and a Bachelor degree in Business Economics from University of California, Irvine. Through my undergraduate study and internships, I became more and more certain that data is a crucial part of future business decision making, thus made me to pursue a Master's degree in Big Data and Analytics. During my Master's program in Santa Clara University, I worked on wide variety of topics in data analysis, including but not limited to Finance, Marketing, Web Analysis and Supply Chain. </p>
 								<p>Some fun facts about me: At the age of 12 I moved to the United States, and have been studying here since. I am bilingual in Mandarin and English.  </p>
-								<span class="image main"><img src="images/headshot.jpg" alt="" /></span>
+								<span class="image main"><img src="images/pet4.jpg" alt="" /></span>
 							</article>
 
 						<!-- Work -->
@@ -132,9 +132,9 @@
 									<img src="images/esports.png" align="left" />
 									</span>
 								<p>Lastly, I enjoy spending time with animals! </p>
-								<span class="image main"><img src="images/pet1.JPG" align="left" />
+								<span class="image main"><img src="images/pet1.jpg" align="left" />
 									<img src="images/pet2.jpg" align="left" />
-									<img src="images/pet3.jpg" /><img src="images/pet4.jpg" /></span>
+									<img src="images/pet3.jpg" /></span>
 								
 							</article>
 
